Fix #66 : Added Cancellation Reason feature, updated documentation.
