# docs/swagger.json
@@ -212,6 +212,13 @@
                         "type": "string",
                         "required": true,
                         "description": "Authentication access token. E.g.: Bearer <access_token>"
+                    },
+                    {
+                        "name": "Cancellation Reason",
+                        "in": "body",
+                        "type": "string",
+                        "required": false,
+                        "description": "Cancellation reason of mentorship relation."
                     }
                 ],
                 "tags": [
